<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- MainORCActivity -->
    <string name="app_name">Trails App</string>
    <string name="action_settings">Settings</string>
    <string name="total_distance_label">Total Distance: </string>
    <string name="time_on_trail_label">Time on Trail: </string>
    <string name="pace_label">Pace: </string>
    <string name="not_available">n/a</string>
    
        <string name="scan_button_text">Scan QR Code</string>
        <string name="exit_button_text">Exit</string>
        

    <!-- Spinners -->

    <string name="map_prompt">Choose a Map</string>
    <string name="achievement_prompt">Choose Achieevement</string>

    <string-array name="map_names">
        <item>Select Map</item>
                <item>ExceEnt</item>
        <item>ExceEnt_L21</item>
        <item>L20_L21</item>
        <item>L18_L20</item>
        <item>DepeEnt_L18</item>
    </string-array>
    <string-array name="achievement_names">
        <item>Select Achievment</item>
        <item>Executive</item>
    </string-array>

    <!-- onTrailsService -->

    <string name="notification_title">TrailsApp</string>
    <string name="notification_message">On the Trails!</string>
    <string name="ticker_text">TRAILING!</string>

    <!-- Splash Screen -->

    <string name="splash_screen_title">TCS TRAILS APP</string>

</resources>