<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tcsorcs.trailsapp.activites.MainTrailsActivity" >

    <LinearLayout
        android:id="@+id/MapPanContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/StatisticsContainer"
        android:layout_alignParentLeft="true"
        android:gravity="top"
        android:orientation="vertical" >

        <com.tcsorcs.trailsapp.mapview.TouchImageView
            android:id="@+id/MapPanView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/StatisticsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Buttons"
        android:layout_alignParentLeft="true"
        android:gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/DistanceLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="10dip"
                android:text="@string/total_distance_label" />

            <TextView
                android:id="@+id/distance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_available" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TimeLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="10dip"
                android:text="@string/time_on_trail_label" />

            <TextView
                android:id="@+id/time_on_trail_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_available" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/PaceLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="10dip"
                android:text="@string/pace_label" />

            <TextView
                android:id="@+id/pace_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:text="@string/not_available" />
        </LinearLayout>
    </LinearLayout>
    <!--
    <LinearLayout
        android:id="@+id/Spinners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Buttons"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/mapSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:entries="@array/map_names"
                android:prompt="@string/map_prompt" />

            <Spinner
                android:id="@+id/achievementSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:entries="@array/achievement_names"
                android:prompt="@string/achievement_prompt" />
        </RelativeLayout>
    </LinearLayout>-->

    <LinearLayout
        android:id="@+id/Buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/ExitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/exit_button_text" />

            <Button
                android:id="@+id/ScanBarcodeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/scan_button_text" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>